--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -67,16 +67,16 @@ set(EXECUTABLE_OUTPUT_PATH ..)
 
 # Show the console window in debug mode on Windows
 if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT ENABLE_WIN32_CONSOLE)
-  set(FILEINFO-WIN32-FLAG WIN32)
+  set(QTGIPHY-WIN32-FLAG WIN32)
 endif(NOT CMAKE_BUILD_TYPE STREQUAL "Debug" AND NOT ENABLE_WIN32_CONSOLE)
 
 # Resource file for windows
 if(WIN32)
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../dist/windows/windres.rc.in ${CMAKE_CURRENT_BINARY_DIR}/windres.rc)
-  set(FILEINFO-WIN32-RESOURCES windres.rc)
+  set(QTGIPHY-WIN32-RESOURCES windres.rc)
 endif(WIN32)
 
-add_executable(qtgiphy ${FILEINFO-WIN32-FLAG} ${FILEINFO-WIN32-RESOURCES} main.cpp)
+add_executable(qtgiphy ${QTGIPHY-WIN32-FLAG} ${QTGIPHY-WIN32-RESOURCES} main.cpp)
 
 target_link_libraries(qtgiphy PRIVATE qtgiphy_lib)
 
